opam-version: "1.2"
maintainer: "Marshall Roch <mroch@fb.com>"
authors: ["Marshall Roch <mroch@fb.com>"]
homepage: "https://github.com/flowtype/ocaml-sourcemaps"
doc: "https://github.com/flowtype/ocaml-sourcemaps"
license: "MIT"
dev-repo: "https://github.com/flowtype/ocaml-sourcemaps.git"
bug-reports: "https://github.com/flowtype/ocaml-sourcemaps/issues"
depends:
[
  "jbuilder" {build & >= "1.0+beta7"}
  "ounit" {test & >= "2.0.0"}
  "vlq"
]
build: [["jbuilder" "build" "-p" name "-j" jobs]]
build-test: [["jbuilder" "runtest" "-p" name "-j" jobs]]
