opam-version: "2.0"
maintainer: "Marshall Roch <mroch@fb.com>"
authors: "Marshall Roch <mroch@fb.com>"
license: "MIT"
homepage: "https://github.com/flowtype/ocaml-sourcemaps"
doc: "https://github.com/flowtype/ocaml-sourcemaps"
bug-reports: "https://github.com/flowtype/ocaml-sourcemaps/issues"
depends: [
  "ocaml"
  "jbuilder" {build & >= "1.0+beta7"}
  "ounit" {with-test & >= "2.0.0"}
  "vlq"
]
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
  ["jbuilder" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/flowtype/ocaml-sourcemaps.git"
description: """
A library for encoding JavaScript source maps
"""
