opam-version: "2.0"
synopsis: "A library for encoding JavaScript source maps"
maintainer: "Marshall Roch <mroch@fb.com>"
authors: "Marshall Roch <mroch@fb.com>"
license: "MIT"
homepage: "https://github.com/flowtype/ocaml-sourcemaps"
doc: "https://github.com/flowtype/ocaml-sourcemaps"
bug-reports: "https://github.com/flowtype/ocaml-sourcemaps/issues"
depends: [
  "ocaml"
  "dune" {build & >= "1.0"}
  "ounit2" {with-test}
  "vlq"
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/flowtype/ocaml-sourcemaps.git"
description: """
A library for encoding JavaScript source maps
"""
